--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* variables */
 :root {
     --gridSize: 16;
+    --boxColor: rgb(255, 102, 0);
 }
 
 * {
@@ -33,5 +34,5 @@
 } */
 
 .hovered {
-    background-color: red;
+    background-color: var(--boxColor);
 }
